# atommovr

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  pytest.ini  setup.py
PPSU2023/: setupc.py
atommover/: __init__.py  animation.py  atom_array.py  benchmarking.py  error_model.py  move.py  tweezer.py  tweezer_array.py
atommover/algorithms/: Algorithm.py  Algorithm_class.py  __init__.py  dual_species.py  single_species.py
atommover/algorithms/single_species/: __init__.py  balance_and_compact.py  bcv2.py  generalized_balance.py  hungarian.py  parallel_LBAP.py  parallel_hungarian.py  readme.md
atommover/algorithms/source/: Hungarian_works.py  PPSU_weight_matching.py  balance_compact.py  bc.py  bc_new.py  ejection.py  generalized_balance.py  hungarian_works.py  inside_out.py  inside_out_utils.py  naive_parallel_Hung.py  scaling_lower_bound.py
atommover/algorithms/utils/: core_utils.py  hungarian_utils.py
atommover/tests/: test_utils.py
atommover/utils/: AtomArray.py  ErrorModel.py  Move.py  Tweezer.py  TweezerArray.py  __init__.py  animation.py  benchmarking.py  core.py  customize.py  errormodels.py  move_utils.py
notebooks/: paper_figures.ipynb  tutorial.ipynb
tests/: test_atom_array.py  test_benchmarking.py  test_tweezers.py
tests/algorithms/: test_algorithm_class.py
tests/utils/: test_atomarray.py  test_benchmarking.py  test_errormodels.py  test_tweezers.py
