[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atommover"
version = "0.1.0"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "scikit-learn",
  "numba",
  "xarray",
  "imageio==2.36.1",
  "pillow==11.1.0"
]

[project.optional-dependencies]
dev = ["ipykernel", "jupyter"]

[tool.setuptools.packages.find]
include = ["atommover*"]
